# Tubender

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: backend.yaml  backend.yml  frontend.yaml  main.yml  makefile.yml  pull_request_template.md
backend/: .gitignore  CMakeLists.txt
backend/src/: Full_Frame 2.stp  Full_Frame.stp  RRH_sketchlines.IGS  ShapeProcessor.hpp  Simple_sketch.IGS  cad_to_gcode.cpp  crow_all.h  crow_test.cpp  determine_file_type.cpp  file_uploading_endpoint 2.cpp  file_uploading_endpoint.cpp  gcode_from_vectors.cpp  gcode_from_vectors.hpp  iges_to_topo.cpp  iges_to_topo.hpp  igs_to_todoDsShape.cpp  manual_input_to_gcode.cpp  manual_input_to_gcode.hpp  shape_to_bspline.cpp  shape_to_bspline.hpp  step_to_topo.cpp  step_to_topo.hpp  tangent_vectors_geom_bspline.cpp  tangent_vectors_geom_bspline.hpp  todoDsShape_to_geomCurve.cpp
frontend/: electron.js  electron.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/info-website/: package-lock.json  package.json
frontend/public/: electron.js  index.html  upload_file.html
frontend/src/: AboutPage.tsx  App.tsx  ContactPage.tsx  HomePage.tsx  MainPage.tsx  PersuasivePage.tsx  ReviewsPage.tsx  dropdown.tsx  enums.tsx  types.tsx
frontend/src/components/: BendSidebar.tsx  Button.tsx  FileUploader.tsx  Navbar.tsx  RoutingComponent.tsx  StepWrapper.tsx
frontend/src/images/: Arrow.tsx  BigCircle.tsx  Chevron.tsx  DoubleCircle.tsx  HifiLogo.tsx  LogoSVG.tsx  MediumCircle.tsx  ProgressStepOne.tsx  ProgressStepThree.tsx  ProgressStepTwo.tsx  Wordmark.tsx  box.tsx  logo.icns
frontend/src/pages/: AboutPage.tsx  ContactPage.tsx  CreateDesign.tsx  DownloadCadConversion.tsx  HomePage.tsx  InputForm.tsx  JoyrideTest.tsx  MainPage.tsx  Onboarding.tsx  PersuasivePage.tsx  ReviewsPage.tsx
static-website/: package-lock.json
tubender/: electron.js  package-lock.json  package.json
tubender/src/: App.js
website/: package-lock.json  package.json  tailwind.config.js
website/src/: App.css  App.tsx  BigGrayWordmarkSVG.tsx  Button.tsx  PersonalInfoForm.tsx  ProductPurchasePage.tsx
website/src/components/: AboutPage.tsx  Footer.tsx  GetInTouch.tsx  HowItWorks.tsx  MailingList.tsx  Navbar.tsx  PersonalInfoForm.tsx  ProductPurchasePage.tsx  ProjectsPage.tsx  SplashScreen.tsx  Timeline.tsx  WhyTubender.tsx
website/src/images/: .background.png.icloud
website/src/pages/: AboutPage.css  AboutPage.tsx  HomePage.css  HomePage.tsx  MainPage.tsx  ProductPurchasePage.tsx  (+1 more)
(+7 files in other folders)
